--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -12,7 +12,7 @@
 
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/home_manystar_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="채팅"
@@ -29,7 +29,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView2">
+            app:layout_constraintTop_toBottomOf="@+id/home_manystar_title">
 
             <TextView
                 android:layout_width="match_parent"
