--- a/app/src/main/res/layout/activity_newpost.xml
+++ b/app/src/main/res/layout/activity_newpost.xml
@@ -6,41 +6,60 @@
     android:layout_height="match_parent"
     tools:context=".newpost">
 
-    <Button
-        android:id="@+id/button4"
-        style="@style/Widget.AppCompat.Button"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButton3"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
         android:layout_marginStart="200dp"
-        android:layout_marginTop="550dp"
-        android:text="+"
-        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
+        android:clickable="true"
+        app:backgroundTint="#0BD6BE"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.75"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.9"
+        app:srcCompat="@drawable/ic_add_black_24dp" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="50dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent">
 
-        <EditText
-            android:id="@+id/editText1"
+        <TableLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:ems="10"
-            android:hint="제목을 입력하세요."
-            android:inputType="textPersonName" />
+            android:stretchColumns="0">
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <EditText
+                    android:id="@+id/editText1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:hint="제목을 입력하세요."
+                    android:inputType="textPersonName" />
+
+                <Button
+                    android:id="@+id/button2"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="글 등록하기" />
+
+            </TableRow>
+
+        </TableLayout>
 
         <EditText
             android:id="@+id/editText2"
-            android:layout_width="411dp"
-            android:layout_height="646dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:ems="10"
             android:gravity="start|top"
             android:hint="내용을 입력하세요."
