--- a/app/src/main/res/layout/logintitle.xml
+++ b/app/src/main/res/layout/logintitle.xml
@@ -19,7 +19,7 @@
                 android:layout_width="125dp"
                 android:layout_height="125dp"
                 android:layout_gravity="center"
-                android:layout_marginTOP="20dp"
+                android:layout_marginTop="20dp"
                 android:src="@drawable/loginlog"/>
 
                 <TextView
