--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -42,16 +42,6 @@
             android:text="상태메시지" />
 
         <TextView
-            android:id="@+id/profile_state_textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:text="상태메시지"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/profile_name_textView" />
-
-        <TextView
             android:id="@+id/profile_office_textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -63,14 +53,15 @@
             app:layout_constraintTop_toTopOf="@+id/guideline2" />
 
         <TextView
-            android:id="@+id/profile_set_idea_textView"
+            android:id="@+id/profile_post_textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="올린 아이디어"
             android:textSize="30sp"
             app:layout_constraintStart_toStartOf="@+id/profile_office_textView"
-            app:layout_constraintTop_toBottomOf="@+id/profile_office_textView" />
+            app:layout_constraintTop_toBottomOf="@+id/profile_office_textView"
+            android:background="?attr/selectableItemBackground"/>
 
         <TextView
             android:id="@+id/prodile_want_idea_textView"
@@ -80,7 +71,8 @@
             android:text="관심있는 아이디어"
             android:textSize="30sp"
             app:layout_constraintStart_toStartOf="@+id/profile_office_textView"
-            app:layout_constraintTop_toBottomOf="@+id/profile_set_idea_textView" />
+            app:layout_constraintTop_toBottomOf="@+id/profile_post_textView"
+            android:background="?attr/selectableItemBackground"/>
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline2"
