clever 라디오 버튼 최신순 cheked: true 추가

--- a/app/src/main/res/layout/activity_clever_idea_board.xml
+++ b/app/src/main/res/layout/activity_clever_idea_board.xml
@@ -54,7 +54,8 @@
             android:id="@+id/rb1_newidea"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="최신순" />
+            android:text="최신순"
+            android:checked="true"/>
 
         <RadioButton
             android:id="@+id/rb2_newidea"
