--- a/app/src/main/res/layout/activity_newpost.xml
+++ b/app/src/main/res/layout/activity_newpost.xml
@@ -7,19 +7,16 @@
     tools:context=".newpost">
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButton3"
+        android:id="@+id/newpost_addImage_Button"
         android:layout_width="55dp"
         android:layout_height="55dp"
-        android:layout_marginStart="200dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
         android:clickable="true"
         app:backgroundTint="#0BD6BE"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.75"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.9"
-        app:srcCompat="@drawable/ic_add_black_24dp" />
+        app:srcCompat="@drawable/ic_image_black_24dp" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
