--- a/app/src/main/res/layout/activity_newpost.xml
+++ b/app/src/main/res/layout/activity_newpost.xml
@@ -9,7 +9,7 @@
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/newpost_addImage_Button"
         android:layout_width="55dp"
-        android:layout_height="55dp"
+        android:layout_height="0dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:clickable="true"
@@ -18,50 +18,51 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/ic_image_black_24dp" />
 
-    <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent">
+    <TableLayout
+        android:id="@+id/tableLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="616dp"
+        android:stretchColumns="0"
+        app:layout_constraintBottom_toTopOf="@+id/newpost_addImage_Button"
+        app:layout_constraintStart_toStartOf="@+id/editText2"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <TableLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:stretchColumns="0">
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <EditText
-                    android:id="@+id/editText1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:ems="10"
-                    android:hint="제목을 입력하세요."
-                    android:inputType="textPersonName" />
-
-                <Button
-                    android:id="@+id/button2"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:text="글 등록하기" />
-
-            </TableRow>
-
-        </TableLayout>
-
-        <EditText
-            android:id="@+id/editText2"
+        <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:ems="10"
-            android:gravity="start|top"
-            android:hint="내용을 입력하세요."
-            android:inputType="textMultiLine" />
+            android:layout_height="match_parent">
 
-    </LinearLayout>
+            <EditText
+                android:id="@+id/editText1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="제목을 입력하세요."
+                android:inputType="textPersonName" />
+
+            <Button
+                android:id="@+id/button2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="글 등록하기" />
+
+        </TableRow>
+
+    </TableLayout>
+
+    <EditText
+        android:id="@+id/editText2"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:ems="10"
+        android:gravity="start|top"
+        android:hint="내용을 입력하세요."
+        android:inputType="textMultiLine"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
