파이어베이스의 인증과 FireStore 연결 후 로그인 기능 완성. 기존에 로그인 했으면 바로 Main으로 넘어감 내정보 앱에 내가 등록한 정보가 나옴 뒤로가기 두번 누를 시 앱 종료

--- a/app/src/main/res/layout/logintitle.xml
+++ b/app/src/main/res/layout/logintitle.xml
@@ -43,20 +43,12 @@
             android:orientation="vertical">
 
 
-            <Button
+            <com.google.android.gms.common.SignInButton
                 android:layout_width="280dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="100dp"
-                android:drawableStart="@drawable/googlelog2"
-                android:drawablePadding="1dp"
-                android:textSize="20dp"
-                android:textStyle="bold"
-                android:textColor="#ffffff"
-                android:background="@color/colorPrimaryDark"
-                android:text="구글 로그인"
-                android:id="@+id/googlelogin"
-                />
+                android:id="@+id/googlelogin" />
 
             <Button
                 android:layout_width="280dp"
@@ -87,6 +79,8 @@
                 android:text="페이스북 로그인"
                 android:id="@+id/facebooklogin"
                 />
+
+
 
 
         </LinearLayout>
