--- a/app/src/main/res/layout/logintitle.xml
+++ b/app/src/main/res/layout/logintitle.xml
@@ -9,61 +9,91 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="225dp"
-            android:orientation="vertical"
-            android:background="@color/colorPrimary">
+            android:layout_height="200dp"
+            android:background="@color/colorPrimary"
+            android:orientation="vertical">
 
             <ImageView
                 android:layout_width="125dp"
                 android:layout_height="125dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="20dp"
-                android:src="@drawable/loginlog"/>
+                android:src="@drawable/loginlog" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="눈사슴"
-                    android:textColor="#ffffff"
-                    android:textSize="25dp"
-                    android:textStyle="bold"
-                    android:layout_marginTop="10dp"/>
-
-
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:text="로그인"
+                android:textColor="#ffffff"
+                android:textSize="25dp"
+                android:textStyle="bold" />
 
 
         </LinearLayout>
 
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+             >
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
 
-            <com.google.android.gms.common.SignInButton
+            <EditText
+                android:id="@+id/login_email_editText"
                 android:layout_width="280dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="100dp"
-                android:id="@+id/googlelogin" />
+                android:layout_marginTop="50dp"
+                android:hint="e-mail"
+                android:inputType="textEmailAddress"/>
+
+            <EditText
+                android:id="@+id/login_passwd_editText"
+                android:layout_width="280dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:hint="password"
+                android:inputType="textPassword"/>
+
+            <TextView
+                android:id="@+id/login_signup_textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="회원가입"
+                android:layout_marginLeft="270dp"
+                android:layout_marginTop="10dp"
+                android:textSize="20sp"
+                />
 
             <Button
                 android:layout_width="280dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="30dp"
-                android:drawableStart="@drawable/kakaotalklog2"
                 android:drawablePadding="1dp"
                 android:textSize="20dp"
                 android:textStyle="bold"
                 android:textColor="#ffffff"
-                android:background="@color/colorPrimaryDark"
-                android:text="카카오톡 로그인"
-                android:id="@+id/kakaologin"
+                android:background="@color/colorAccent"
+                android:text="로그인"
+                android:id="@+id/login_email_button"
                 />
+
+            <com.google.android.gms.common.SignInButton
+                android:layout_width="280dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                android:id="@+id/googlelogin" />
 
             <Button
                 android:layout_width="280dp"
@@ -78,13 +108,14 @@
                 android:background="@color/colorPrimaryDark"
                 android:text="페이스북 로그인"
                 android:id="@+id/facebooklogin"
+                android:layout_marginBottom="30dp"
                 />
 
 
 
 
         </LinearLayout>
-
+        </ScrollView>
 
         
     </LinearLayout>
