비밀번호 힌트 추가

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -37,7 +37,7 @@
             android:id="@+id/signup_passwd_editText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="비밀번호"
+            android:hint="비밀번호(특수문자 포함 8~20자)"
             android:inputType="textPassword"
             android:layout_marginBottom="15dp"
             />
