--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#039BE5</color>
     <color name="colorPrimaryDark">#0277BD</color>
     <color name="colorAccent">#546E7A</color>
+    <color name="colorEditText">#D1EDFF</color>
 </resources>
