--- a/app/src/main/res/layout/ideamain.xml
+++ b/app/src/main/res/layout/ideamain.xml
@@ -122,10 +122,17 @@
                 android:layout_height="30dp"
                 android:background="@drawable/checkbox_background"
                 android:button="@android:color/transparent"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="32dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
                 />
+            <TextView
+                android:id="@+id/ideamain_star_textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/ideamain_star_checkBox"
+                android:text="100"
+                android:layout_alignBottom="@+id/ideamain_star_checkBox"/>
 
             <ImageView
                 android:id="@+id/ideamain_chat_imageView"
@@ -134,7 +141,9 @@
                 android:src="@drawable/ic_insert_comment_black_24dp"
                 android:layout_gravity=""
                 android:layout_alignParentRight="true"
-                android:layout_margin="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="32dp"
                 />
             </RelativeLayout>
             <androidx.recyclerview.widget.RecyclerView
