--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#0277BD</color>
     <color name="colorAccent">#546E7A</color>
     <color name="colorEditText">#D1EDFF</color>
+    <color name="colorChatBubbleMe">#85E7FF</color>
 </resources>
