올린아이디어

--- a/app/src/main/res/layout/posts_recyclerview.xml
+++ b/app/src/main/res/layout/posts_recyclerview.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="1dp"
+    android:layout_marginBottom="4dp"
     android:background="@drawable/posts_recyclerview_layout">
 
     <ImageView
@@ -12,11 +12,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/posts_textView2"
+        app:layout_constraintTop_toBottomOf="@+id/posts_textView4"
         app:srcCompat="@drawable/ic_star_gold_24dp" />
 
     <ImageView
@@ -29,29 +29,32 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/bt_camera" />
+        app:srcCompat="@drawable/ic_camera_alt_black_24dp" />
 
     <TextView
         android:id="@+id/posts_textView1"
-        android:layout_width="110dp"
-        android:layout_height="20dp"
+        android:layout_width="170dp"
+        android:layout_height="15dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:gravity="right|end"
         android:text="YY, MM, DD"
-        android:textColor="@color/design_default_color_on_secondary"
+        android:textColor="#858585"
+        android:textSize="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/posts_imageView" />
 
     <TextView
         android:id="@+id/posts_textView2"
-        android:layout_width="300dp"
-        android:layout_height="45dp"
+        android:layout_width="0dp"
+        android:layout_height="22dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:gravity="center|left"
         android:text="글제목"
         android:textColor="@color/design_default_color_on_secondary"
-        android:textSize="18dp"
+        android:textSize="16dp"
         app:layout_constraintEnd_toStartOf="@+id/posts_imageView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -61,12 +64,26 @@
         android:layout_width="43dp"
         android:layout_height="21dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:text="추천수"
         android:textColor="@color/design_default_color_on_secondary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/posts_imageView2"
+        app:layout_constraintTop_toBottomOf="@+id/posts_textView4" />
+
+    <TextView
+        android:id="@+id/posts_textView4"
+        android:layout_width="0dp"
+        android:layout_height="22dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:gravity="center|left"
+        android:lines="1"
+        android:text="내용"
+        android:textColor="#858585"
+        android:textSize="12dp"
+        app:layout_constraintEnd_toStartOf="@+id/posts_imageView"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/posts_textView2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
