IdeaMain 진입시 프로필 사진 변경

--- a/app/src/main/res/layout/ideamain.xml
+++ b/app/src/main/res/layout/ideamain.xml
@@ -36,9 +36,10 @@
 
                 <ImageView
                     android:id="@+id/ideamain_profile_imageView"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:src="@drawable/ic_person_black" />
+                    android:layout_width="75dp"
+                    android:layout_height="75dp"
+                    android:src="@drawable/ic_person_black"
+                    android:scaleType="centerCrop"/>
 
                 <TextView
                     android:id="@+id/ideamain_title_textView"
