--- a/app/src/main/res/layout/activity_chatboard.xml
+++ b/app/src/main/res/layout/activity_chatboard.xml
@@ -7,6 +7,23 @@
     android:layout_height="match_parent"
     tools:context=".IdeamainActivity">
 
+    <androidx.drawerlayout.widget.DrawerLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:id="@+id/chatdrawer">
+
+        <ListView
+            android:id="@+id/drawer_chat"
+            android:layout_width="275dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="right"
+            android:background="#ffffff"></ListView>
+    </androidx.drawerlayout.widget.DrawerLayout>
+
 
     <EditText
         android:id="@+id/chatboard_editText"
